[package]
name = "ntex-broker"
version = "0.1.0"
authors = ["Denis Molokanov <dmolokanov@users.noreply.github.com>"]
edition = "2018"

[dependencies]
ntex-mqtt = "0.3.8"
env_logger = "0.7"
log = "0.4.11"
ntex = "0.1.23"
futures-util = "0.3.5"
fxhash = "0.2.1"
bytestring = "0.1.5"
bytes = "0.5.6"
tokio = { version = "0.2.22", features = ["sync"] }
