[package]
name = "ntex-broker"
version = "0.1.0"
authors = ["Denis Molokanov <dmolokanov@users.noreply.github.com>"]
edition = "2018"

[dependencies]
ntex-mqtt = "0.4"
env_logger = "0.7"
log = "0.4"
ntex = "0.1"
futures-util = "0.3"
fxhash = "0.2"
bytestring = "0.1"
bytes = "0.5"
tokio = { version = "0.2", features = ["sync"] }
